# onedrive_sync

./: .gitignore  README.md  pyproject.toml
onedrive_sync/: __init__.py  __main__.py
