[tool.poetry]
name = "sync-onedrive"
version = "0.1.0"
description = ""
authors = ["Ozy-Viking <zthankin@gmail.com>"]
readme = "README.md"
packages = [{include = "sync_onedrive"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
loguru = "^0.6.0"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
